[package]
name = "ciri"
version = "0.2.2"
authors = ["xentec <xentec@aix0.eu>"]
license = "GPL-2.0"
edition = "2018"

[dependencies]
serenity = "^0.10"
reqwest = { version = "^0.11", features = ["gzip", "json"] }
tokio = { version = "^1", features = ["fs"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

anyhow = "^1.0"
chrono = "^0.4"
indexmap = { version = "1", features = ["serde-1"] }
rand = { version = "^0.8", default-features = false, features = ["std"] }

tracing = { version = "^0.1", features = ["log", "max_level_trace", "release_max_level_debug"] }
tracing-subscriber = "^0.2"
tracing-futures = "^0.2" # needed so intrument works with async functions.

[profile.release]
debug = 1
lto = true
