[package]
name = "ciri"
version = "0.2.3"
authors = ["xentec <xentec@aix0.eu>"]
license = "GPL-2.0"
edition = "2018"

[dependencies]
serenity = { version = "^0.10.9", features = ["voice", "rustls_backend", "unstable_discord_api"] }
reqwest = { version = "^0.11", features = ["gzip", "json"] }
tokio = { version = "^1", features = ["rt-multi-thread", "fs"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

anyhow = "^1.0"
chrono = "^0.4"
indexmap = { version = "1", features = ["serde-1"] }
rand = { version = "^0.8", default-features = false, features = ["std"] }

tracing = { version = "^0.1.29", features = ["log", "max_level_trace", "release_max_level_debug"] }
tracing-subscriber = "^0.3"

[profile.release]
debug = 1
lto = 'thin'
